# Q-Reps

./: .gitmodules  CartPole_qreps_v2-1.csv  README.md  plot_constraint.ipynb  pyproject.toml  qreps_analysis.csv  requirements.txt  tune_results_hebo_512.csv  tune_results_hebo_512_target.csv
algos/: tuner_example.py
algos/qreps/: qreps_main.py
algos/utils/: benchmark.py  tuner.py
algos/xppo/: README.md  qreps_analysis_v2.csv  xppo.py  xppo_analysis_v2.csv  xppo_tune.py  xppo_v2.py
cleanrl/ppo/: .python-version  ppo.py  ppo_atari.py
cleanrl/qreps/: qreps.py  qreps_analysis.csv  qreps_atari.py  qreps_rb.py  qreps_tune.py
cleanrl/sac/: sac_atari.py
cleanrl/scripts/: run_ppo.sh  run_qreps.sh  run_xppo.sh
cleanrl/xppo/: xppo.py  xppo_v2.py
dev/lightning_research_framework/: xppo_analysis_v2.csv
dev/tests/: buffer.py  elbe.py  ex.py  replay_buffer.py  sampler.py  valuefunction.py
lightning_research_framework/.out_test_1/: config.yaml
lightning_research_framework/.out_test_2/: config.yaml
lightning_research_framework/.out_test_4/: config.yaml  events.out.tfevents.1708590915.Nicolass-Air.technicolor.net.55515.1  log.csv
lightning_research_framework/.out_test_5/: config.yaml
other/: CartPole_qreps_v2-1-3_seeds_averaging.csv  LunarLander_tune_random_seeds.csv  analyze_runs.ipynb  plots.ipynb  qreps_analysis.csv  qreps_analysis_v2.csv  qreps_analysis_v3.csv  top_runs_CartPole.csv  tuning_2q_rand.csv  tuning_no_grad.csv  tuning_no_grad_norand.csv
tests/: abstract_algorithm.py  feature_map.py  policy.py  qfunction.py  qreps.py
wandb/: latest-run
(+986 files in other folders)
